[package]
name = "coraline_facebook"
version = "0.1.0"
authors = ["Srinivas Kaza <srinivas@kaza.io>"]
edition = "2018"

[build]
rustflags = ["-C", "target-cpu=native"]

[dependencies]
zip = "0.5.5"
chrono = "*"
simd-json = "0.3.9"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = "2.3.3"
mimalloc = { version = "0.1.19", default-features = false }