[package]
name = "chat_log_parser"
version = "0.1.0"
authors = ["Srinivas Kaza <srinivas@kaza.io>"]
edition = "2018"

[lib]
name = "chat_log_parser_lib"
path = "src/lib.rs"

[[bin]]
name = "chat_log_parser_bin"
path = "src/main.rs"

[dependencies]
zip = { version = "0.5.5", default-features = false, features = ["deflate"] }
rand_pcg = {version = "0.2.1"}
rand = {version = "0.7.3"}
chrono = "0.4.11"
simd-json = "0.3.9"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
multimap = "0.8.1"
clap = "2.3.3"
#mimalloc = { version = "0.1.19", default-features = false }
